--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <b>GitHub:</b> <a href = "https://github.com/mpradospri/08MBID---Visualizacion-de-Datos"> https://github.com/mpradospri/08MBID---Visualizacion-de-Datos </a><br>
 
 
-<iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRkGD4HDByRwTJLB4_q6Pua9oZTB35IaU8y8TpRRGB7GT9BkZeja683gT_dsjVnPF2KGC3iIO__iaak/pubchart?oid=1502544531&amp;format=interactive"></iframe>
+<iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRkGD4HDByRwTJLB4_q6Pua9oZTB35IaU8y8TpRRGB7GT9BkZeja683gT_dsjVnPF2KGC3iIO__iaak/pubchart?oid=1502544531&amp;format=interactive"></iframe><br>
 
 
 
-<iframe title="Renta per cápita vs Emisión total" aria-label="Scatter Plot" id="datawrapper-chart-KYC1b" src="https://datawrapper.dwcdn.net/KYC1b/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="400"></iframe>
+<iframe title="Renta per cápita vs Emisión total" aria-label="Scatter Plot" id="datawrapper-chart-KYC1b" src="https://datawrapper.dwcdn.net/KYC1b/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="400"></iframe><br>
