--- a/index.html
+++ b/index.html
@@ -15,3 +15,6 @@
 
 <b> Actividad extra 1: </b> Gráfico combinado
 <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRkGD4HDByRwTJLB4_q6Pua9oZTB35IaU8y8TpRRGB7GT9BkZeja683gT_dsjVnPF2KGC3iIO__iaak/pubchart?oid=1635072186&amp;format=interactive"></iframe> <br>
+
+<b> Actividad extra 2: </b> Gráfico datawrapper
+<iframe title="Top 10 emisiones de CO2" aria-label="Bar Chart" id="datawrapper-chart-jPH8N" src="https://datawrapper.dwcdn.net/jPH8N/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="404"></iframe>
