--- a/index.html
+++ b/index.html
@@ -18,3 +18,12 @@
 
 <b> Actividad extra 2: </b> Gráfico datawrapper
 <iframe title="Top 10 emisiones de CO2" aria-label="Bar Chart" id="datawrapper-chart-jPH8N" src="https://datawrapper.dwcdn.net/jPH8N/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="404"></iframe>
+
+<h1>Visualización – AG2 </h1>
+
+<b>Nombre:</b> María Prados Privado <br>
+
+<b>URL:</b> <a href = "https://js-uvy3xc.stackblitz.io"> https://js-uvy3xc.stackblitz.io/ </a><br>
+
+
+<iframe title="AG2 -VisualizacionMariaPrados" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=be66ab68-a64c-48ac-b5b5-9b6adc611078&autoAuth=true&ctid=02674ef9-5c2c-47d0-b2bc-595a784dda00&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXdlc3QtZXVyb3BlLWItcHJpbWFyeS1yZWRpcmVjdC5hbmFseXNpcy53aW5kb3dzLm5ldC8ifQ%3D%3D" frameborder="0" allowFullScreen="true"></iframe>
