--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
+<head>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3plus/1.9.2/d3plus.full.min.js"></
+  script>
+  </head>
+
+
+
+
+
+
+
 <h1>Visualización – AG1 </h1>
 
 <b>Nombre:</b> María Prados Privado <br>
@@ -32,5 +45,5 @@
 <h1>Visualización – AG3 </h1>
 
 <b>Nombre:</b> María Prados Privado <br>
-<b>Google Colab:</b> <a href =
-https://colab.research.google.com/drive/1LAEkhQfsJv9JQO8u4AfC_UYXr6L_WdUA?usp=sharing> https://colab.research.google.com/drive/1LAEkhQfsJv9JQO8u4AfC_UYXr6L_WdUA?usp=sharing </a>
+<b>Google Colab:</b> <a href = "https://colab.research.google.com/drive/1LAEkhQfsJv9JQO8u4AfC_UYXr6L_WdUA?usp=sharing"> https://colab.research.google.com/drive/1LAEkhQfsJv9JQO8u4AfC_UYXr6L_WdUA?usp=sharing </a><br>
+
