--- a/index.html
+++ b/index.html
@@ -45,5 +45,10 @@
 <h1>Visualización – AG3 </h1>
 
 <b>Nombre:</b> María Prados Privado <br>
+
 <b>Google Colab:</b> <a href = "https://colab.research.google.com/drive/1LAEkhQfsJv9JQO8u4AfC_UYXr6L_WdUA?usp=sharing"> https://colab.research.google.com/drive/1LAEkhQfsJv9JQO8u4AfC_UYXr6L_WdUA?usp=sharing </a><br>
+
+
+<h2> Gráfico de Columnas con D3Plus</h2>
+<div id="viz1"></div>
 
