--- a/index.html
+++ b/index.html
@@ -52,3 +52,5 @@
 <h2> Gráfico de Columnas con D3Plus</h2>
 <div id="viz1"></div>
 
+<h2> Gráfico de MultiColumnas con D3Plus</h2>
+<div id="viz2"></div>
