--- a/index.html
+++ b/index.html
@@ -54,3 +54,6 @@
 
 <h2> Gráfico de MultiColumnas con D3Plus</h2>
 <div id="viz2"></div>
+
+<h2> Diagrama de cajas y bigotes </h2>
+<div id="viz3"></div>
